--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <ul>
-<li><a class="main-button" href="1-gallery.html">Image gallery</a></li>
-<li><a class="main-button" href="2-form.html">Feedback form</a></li>
+<li><a class="main-button" href="./1-gallery.html">Image gallery</a></li>
+<li><a class="main-button" href="./2-form.html">Feedback form</a></li>
     </ul>
   </body>
 </html>
